--- a/src/webapp/WEB-INF/pages/edit.html
+++ b/src/webapp/WEB-INF/pages/edit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Update user</h1>
-<form action="#" th:method="PATCH" th:action="@{/edit}" th:object="${user}">
+<form action="#" th:method="POST" th:action="@{/edit}" th:object="${user}">
     <table>
         <tr>
             <td>
